1. alert rediuce size 2. width issue in name, breathing space increase 3. meal icon alignment issue 4. Enquiry box fixed width

--- a/frontend/web/css/search-popup/layout.scss
+++ b/frontend/web/css/search-popup/layout.scss
@@ -15,10 +15,16 @@ $font-bold: Bw-Mitga-bold;
 
 .resort-details-area {
     display: flex;
+    justify-content: space-between;
 }
 
 .resort-details-area figure {
     margin: 0 12px 0 0;
+    width: 80px;
+}
+
+.resort-details-area article {
+    width: calc(100% - 95px);
 }
 
 .resort-details-area article h4 {
@@ -116,8 +122,9 @@ $font-bold: Bw-Mitga-bold;
                 }
 
                 .modal-body {
+                    width: 100%;
+                    max-width: 1200px;
                     padding: 20px 0 0;
-                    max-width: 1100px;
                     margin: 40px auto 0;
                 }
             }
@@ -136,8 +143,13 @@ $font-bold: Bw-Mitga-bold;
 
     .search-result-left {
         display: flex;
+        width: 50%;
         align-items: flex-start;
         justify-content: flex-start;
+
+        .card-details {
+            width: 100%;
+        }
 
         .card-img {
             width: 115px;
@@ -230,6 +242,8 @@ $font-bold: Bw-Mitga-bold;
 }
 
 .enquiry-box-wrapper {
+    width: 100%;
+    max-width: 500px;
     display: flex;
     align-items: stretch;
     justify-content: space-between;
@@ -293,6 +307,7 @@ $font-bold: Bw-Mitga-bold;
 }
 
 .room-head-info {
+    width: 100%;
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
@@ -397,6 +412,7 @@ span.room-cat-text {
         justify-content: space-between;
 
         .room-content {
+            width: 45%;
             padding: 10px;
             border-right: 1px solid #999FB4;
         }
@@ -415,8 +431,9 @@ span.room-cat-text {
 
     .room-policy-occupancy-single {
         display: flex;
-        flex-direction: column;
+        min-width: 220px;
         align-items: stretch;
+        flex-direction: column;
         justify-content: space-between;
         border-right: 1px solid #999FB4;
 
@@ -541,7 +558,11 @@ span.room-cat-text {
         justify-content: space-between;
 
         .room-single-content-area {
-            width: 32%;
+            width: 37%;
+
+            &:nth-child(1) {
+                width: 26%;
+            }
 
             .room-single-header {
                 background: #fff;
@@ -558,6 +579,10 @@ span.room-cat-text {
                 align-items: center;
                 justify-content: center;
                 min-height: 45px;
+            }
+
+            .day-block {
+                background: #e1e5ff;
             }
 
             .room-single-content-wrapper {
@@ -597,6 +622,7 @@ span.room-cat-text {
     display: flex;
     align-items: center;
     justify-content: center;
+    white-space: nowrap;
 
     img {
         max-width: 33px;
@@ -607,7 +633,7 @@ span.room-cat-text {
     position: relative;
     display: inline-block;
     width: 25px;
-    margin: 0 0 0 10px;
+    margin: 0 10px 0 10px;
 
     img {
         max-width: 25px;
@@ -650,13 +676,13 @@ span.room-cat-text {
     }
 
     .info-icon-main {
-        margin: 60px 0 0;
+        margin: 40px 0 0;
         text-align: center;
         width: 100%;
 
         .info-icon {
-            width: 24px;
-            height: 24px;
+            width: 18px;
+            height: 18px;
             margin: 0 auto;
             background: #F44336;
             border-radius: 50%;
